# django-style-guide

./: README.md  cookiecutter.json
{{cookiecutter.project_name}}/: .env.example  README.md  docker-compose.dev.yml  docker-compose.yml  manage.py  mypy.ini  package.json  pyproject.toml  pytest.ini  ruff.toml  tailwind.config.js
{{cookiecutter.project_name}}/config/: asgi.py  celery.py  env.py  urls.py  wsgi.py
{{cookiecutter.project_name}}/config/django/: base.py  dev.py  prod.py  test.py
{{cookiecutter.project_name}}/config/settings/: celery.py  compressor.py  crispy.py  djoser.py  email_sending.py  jwt.py  logging.py  redis.py  rest.py  sessions.py  simple_jwt.py  smtp4dev.py  swagger.py
{{cookiecutter.project_name}}/docker/: dev.Dockerfile  prod.Dockerfile  web_entrypoint.sh
{{cookiecutter.project_name}}/locustfiles/: browse_products.py
{{cookiecutter.project_name}}/requirements/: base.txt  dev.txt
{{cookiecutter.project_name}}/static/src/: output.css
{{cookiecutter.project_name}}/templates/: base.html
{{cookiecutter.project_name}}/{{cookiecutter.project_slug}}/api/: apps.py  exception_handlers.py  mixins.py  pagination.py  urls.py
{{cookiecutter.project_name}}/{{cookiecutter.project_slug}}/authentication/: apps.py  urls.py
{{cookiecutter.project_name}}/{{cookiecutter.project_slug}}/common/: apps.py  models.py  services.py
{{cookiecutter.project_name}}/{{cookiecutter.project_slug}}/common/migrations/: 0001_initial.py
{{cookiecutter.project_name}}/{{cookiecutter.project_slug}}/core/: admin.py  apps.py  serializers.py  urls.py
(+5 files in other folders)
