[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "{{cookiecutter.project_name}}"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.1.3",
    "dj-database-url>=2.3.0",
    "django-cors-headers>=4.6.0",
    "django-environ>=0.11.2",
    "django-extensions>=3.2.3",
    "django-filter>=24.3",
    "django-redis>=5.4.0",
    "django-storages>=1.14.4",
    "django-template-mail>=0.1",
    "django-widget-tweaks>=1.5.0",
    "djangorestframework>=3.15.2",
    "djangorestframework-simplejwt>=5.3.1",
    "djoser>=2.3.1",
    "drf-jwt>=1.19.2",
    "drf-nested-routers>=0.94.1",
    "drf-spectacular>=0.27.2",
    "factory-boy>=3.3.1",
    "faker>=30.8.2",
    "psycopg2-binary>=2.9.10",
    "gunicorn>=23.0.0",
    "redis>=5.2.0",
    "whitenoise>=6.8.2",
    "ruff>=0.7.3",
    "pytest>=8.3.3",
    "pytest-django>=4.9.0",
    "sentry-sdk>=2.19.0",
    "locust>=2.32.3",
    "pillow>=11.0.0",
    "crispy-tailwind>=1.0.3",
    "django-compressor>=4.5.1",
]

[tool.uv]
dev-dependencies = [
    "ipython>=8.29.0",
    "pytest-postgresql>=6.1.1",
    "pytest-watch>=4.2.0",
]

[tool.hatch.build.targets.wheel]
packages = ["{{cookiecutter.project_slug}}"]

[tool.setuptools.packages.find]
exclude = ["test*"]

[[tool.bumpversion.files]]
filename = "pyproject.toml"
